<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSearchFragment">

    <EditText
        android:id="@+id/food_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_type"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:background="@drawable/edit_background"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:padding="@dimen/edit_padding"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@id/food_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <EditText
        android:id="@+id/food_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/edit_padding"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@drawable/edit_background"
        android:layout_marginBottom="@dimen/marginTop"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@id/searchButton"
        tools:layout_editor_absoluteX="0dp"
        android:focusable="true" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/food_location" />
</androidx.constraintlayout.widget.ConstraintLayout>